// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders "Not logged in" correctly 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/welcome\\" isActive={[Function: matchExceptSourcecastAchievement]}>
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <Blueprint4.Popover isOpen={false} position=\\"bottom-left\\" onInteraction={[Function: onInteraction]} boundary=\\"scrollParent\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} interactionKind=\\"click\\" minimal={false} modifiers={{...}} openOnTargetFocus={true} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true} wrapperTagName=\\"span\\">
        <Blueprint4.Button onClick={[Function: toggleMenu]} icon=\\"translate\\">
          Select Language
        </Blueprint4.Button>
        <Blueprint4.Menu>
          <Blueprint4.MenuItem text=\\"JavaScript\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Python\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Scheme\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
        </Blueprint4.Menu>
      </Blueprint4.Popover>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={[undefined]} name={[undefined]} />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/contributors\\" />
    <Route path=\\"/courses/:courseId/sourcecast\\" />
    <Route path=\\"/courses/:courseId/achievements\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route />
  </Switch>
</Fragment>"
`;

exports[`NavigationBar renders correctly for student with course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/courses/1\\" isActive={[Function: matchExceptSourcecastAchievement]}>
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          CS1101S
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/courses/1/sourcecast\\">
        <Blueprint4.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/playground\\">
        <Blueprint4.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/sicpjs/\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/courses/1/achievements\\">
        <Blueprint4.Icon icon=\\"mountain\\" />
        <div className=\\"navbar-button-text\\">
          Achievements
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <Blueprint4.Popover isOpen={false} position=\\"bottom-left\\" onInteraction={[Function: onInteraction]} boundary=\\"scrollParent\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} interactionKind=\\"click\\" minimal={false} modifiers={{...}} openOnTargetFocus={true} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true} wrapperTagName=\\"span\\">
        <Blueprint4.Button onClick={[Function: toggleMenu]} icon=\\"translate\\">
          Select Language
        </Blueprint4.Button>
        <Blueprint4.Menu>
          <Blueprint4.MenuItem text=\\"JavaScript\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Python\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Scheme\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
        </Blueprint4.Menu>
      </Blueprint4.Popover>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={1} name=\\"Bob\\" />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/contributors\\" />
    <Route path=\\"/courses/:courseId/sourcecast\\" />
    <Route path=\\"/courses/:courseId/achievements\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route>
      <AcademyNavigationBar role=\\"student\\" assessmentTypes={{...}} courseId={1} />
    </Route>
  </Switch>
</Fragment>"
`;

exports[`NavigationBar renders correctly for student without course 1`] = `
"<Fragment>
  <Blueprint4.Navbar className=\\"NavigationBar primary-navbar bp4-dark\\">
    <Blueprint4.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/welcome\\" isActive={[Function: matchExceptSourcecastAchievement]}>
        <Blueprint4.Icon icon=\\"symbol-diamond\\" />
        <Blueprint4.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint4.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/githubassessments\\">
        <Blueprint4.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/sicpjs/\\">
        <Blueprint4.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
    </Blueprint4.NavbarGroup>
    <Blueprint4.NavbarGroup align=\\"right\\">
      <Blueprint4.Popover isOpen={false} position=\\"bottom-left\\" onInteraction={[Function: onInteraction]} boundary=\\"scrollParent\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} inheritDarkTheme={true} interactionKind=\\"click\\" minimal={false} modifiers={{...}} openOnTargetFocus={true} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true} wrapperTagName=\\"span\\">
        <Blueprint4.Button onClick={[Function: toggleMenu]} icon=\\"translate\\">
          Select Language
        </Blueprint4.Button>
        <Blueprint4.Menu>
          <Blueprint4.MenuItem text=\\"JavaScript\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Python\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
          <Blueprint4.MenuItem text=\\"Scheme\\" active={false} disabled={false} multiline={false} popoverProps={{...}} selected={false} shouldDismissPopover={true} />
        </Blueprint4.Menu>
      </Blueprint4.Popover>
      <NavLink activeClassName=\\"bp4-active\\" className=\\"NavigationBar__link bp4-button bp4-minimal\\" to=\\"/contributors\\">
        <Blueprint4.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint4.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint4.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={[undefined]} name=\\"Bob\\" />
    </Blueprint4.NavbarGroup>
  </Blueprint4.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/contributors\\" />
    <Route path=\\"/courses/:courseId/sourcecast\\" />
    <Route path=\\"/courses/:courseId/achievements\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route />
  </Switch>
</Fragment>"
`;
